# PhotoMapAI

./: .gitignore  .prettierignore  404.html  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MOVE_FEATURE_IMPLEMENTATION.md  Makefile  README.md  README.zh-TW.md  THIRD_PARTY_LICENSES.txt  benchmark_encoders.py  demo_config.yaml  eslint.config.js  index.html  jest.config.js  mkdocs.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  setup.py  start_search_api.sh  start_webui.sh
.claude/: settings.json
.claude/hooks/: guard-master-edits.py
.github/: copilot-instructions.md
.github/workflows/: deploy-dmg.yml  deploy-dockerhub.yml  deploy-launcher.yml  deploy-pyinstaller.yml  deploy-pypi.yml  deploy.yml  deploy_pyinstaller.yml  deploy_pyinstaller_mac_linux.yml  lint.yml  make_dmg.yml  pypi.yml  release.yml  run_js_tests.yml  run_tests.yml  test.yml  upload-artifacts.yml
INSTALL/: install_linux_mac.sh  install_windows.bat  install_windows.ps1
INSTALL/launcher/icons/: photomap.icns
INSTALL/launcher/linux/: build_appimage.sh  photomap.desktop
INSTALL/launcher/macos/: Info.plist.template  build_app.sh
INSTALL/launcher/windows/: photomap.iss
INSTALL/lib/: windows.ps1
INSTALL/pyinstaller/: make_pyinstaller_image.ps1  make_pyinstaller_image.sh
certs/: cert.pem
cleanup/: remove_duplicates.pl
clipslide/: __init__.py
clipslide/backend/: __init__.py  clipslide_server.py  config.py  constants.py  embeddings.py  imagetool.py  metadata_formatting.py  progress.py
clipslide/backend/metadata_modules/: exif_formatter.py  slide_summary.py  (+1 more)
clipslide/frontend/: __init__.py  dash_umap.py  plot_umap.py  slideshow_server.py
configuration/: index.html
data_exploration/: dash_umap.py
data_exploration/assets/: custom.css  modal_propagation.js
demo_images/: README
developer/api/: index.html
developer/architecture/: index.html
developer/frontend/: index.html
docker/: Dockerfile  Dockerfile.demo  demo_config.yaml  index.html
docs/: configuration.md  docker.md  index.md  installation.md  release-notes.md  troubleshooting.md
docs/developer/: api.md  architecture.md  frontend.md
docs/installation/: cuda.md  python.md
docs/stylesheets/: extra.css
docs/user-guide/: albums.md  autotagging.md  basic-usage.md  bookmarks.md  configuration.md  curator-mode.md  encoders.md  invokeai-integration.md  keyboard-shortcuts.md  search.md  semantic-map.md  upgrading.md
installation/: index.html  install_windows.ps1
installation/cuda/: index.html
installation/lib/: windows.ps1
installation/python/: index.html
launcher/: README.md  browser.go  browser_test.go  embed_off.go  embed_on.go  go.mod  main.go  paths.go  uv.go  uv_test.go
macos/: setup.py
photomap/backend/: args.py  browser.py  cluster_labels.py  config.py  embeddings.py  encoders.py  imagetool.py  invokeai_client.py  launch.py  main_wrapper.py  metadata_extraction.py  metadata_formatting.py  photomap_outer_loop.py  photomap_server.py  preferences.py  progress.py  static_assets.py  util.py
release-notes/: index.html
scripts/: build_vocab.py  download-vendor.py  find_duplicate_images.py  start_search_api.sh  start_slideshow.sh  start_umap.sh  start_webui.sh
scripts/metadata_tests/: dump_invoke_metadata.py  json2pydantic.py  parse_invoke_metadata.py  parse_invoke_metadata_from_file.py
search/: search_index.json
src/: find_all_black.py  image_search.py  imagetool.py  search_api.py  web_ui.py
src/backend/: embeddings.py  image_search.py  imagetool.py  metadata.py  search_api.py
src/frontend/: dash_umap.py  slideshow_server.py  web_ui.py
static/: style.css
stylesheets/: extra.css
templates/: index.html
tests/: CURATION_TEST_COVERAGE.md  conftest.py  fixtures.py  test_albums.py  test_app.py  test_image_retrieval.py  test_index.py  test_search.py  test_umap.py
tests/backend/: conftest.py  fixtures.py  test_album_lock.py  test_albums.py  test_app.py  test_browser.py  test_cluster_labels.py  test_cluster_labels_router.py  test_curation.py  test_embeddings_diff.py  test_encoders.py  test_image_retrieval.py  test_image_type_guard.py  test_imagetool.py  test_index.py  test_invoke_metadata.py  test_invoke_router.py  test_invokeai_board_index.py  test_locationiq_cache.py  test_metadata_extraction.py  test_metadata_formatting.py  test_preferences.py  test_progress.py  test_scan_serialization.py  test_search.py  test_static_assets.py  test_thumbnail_validation.py  test_umap.py  test_upgrade.py  test_upgrade_router.py
tests/e2e/: README.md  conftest.py  test_slideshow_smoke.py
tests/frontend/: README.md  about.test.js  album-manager-progress.test.js  album-manager-update-all.test.js  back-button.test.js  back-stack.test.js  cluster-utils.test.js  curation-draggable.test.js  curation-functionality.test.js  grid-view-deletion.test.js  grid-view.test.js  index-api.test.js  invoke-capabilities.test.js  invoke-recall.test.js  invokeai-album-source.test.js  invokeai-settings.test.js  metadata-drawer-draggable.test.js  preferences-client.test.js  reference-thumbnails.test.js  score-display.test.js  search.test.js  seek-search-rebuild.test.js  seek-slider-live-index.test.js  seek-slider.test.js  setup.js  slide-state-deletion.test.js  slide-state-refresh.test.js  slideshow.test.js  swiper-shuffle.test.js  toast.test.js  umap-helpers.test.js  umap-reindex.test.js  utils.test.js  weight-slider.test.js
troubleshooting/: index.html
user-guide/: invokeai-integration.md~
user-guide/albums/: index.html
user-guide/autotagging/: index.html
user-guide/basic-usage/: index.html
user-guide/bookmarks/: index.html
user-guide/configuration/: index.html
user-guide/controls/: index.html
user-guide/curator-mode/: index.html
user-guide/encoders/: index.html
user-guide/invokeai-integration/: index.html
user-guide/keyboard-shortcuts/: index.html
user-guide/search/: index.html
user-guide/semantic-map/: index.html
user-guide/upgrading/: index.html
utility_scripts/: benchmark_cpu_vs_cuda.py  image_orientation.py  print_metadata.py  test_metadata.py  test_pick_from_image.py
(+147 files in other folders)
