[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photomap"
version = "0.3.0"
description = "AI-based image clustering and exploration tool"
authors = [
    { name = "Lincoln Stein", email = "lincoln.stein@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "Pillow",
    "clip-anytorch",
    "dash",
    "fastapi",
    "jinja2",
    "networkx",
    "numpy",
    "pandas",
    "platformdirs",
    "pydantic",
    "python-multipart",
    "PyYAML",
    "requests",
    "scikit-learn",
    "torch",
    "tqdm",
    "umap-learn",
    "uvicorn",
]

[project.optional-dependencies]
testing = [
    "pytest",
    "pytest-cov",
    "httpx",
    "asynctest",
    "pytest-asyncio",
]
development = [
    "mkdocs-material",
]

[tool.setuptools.packages.find]
where = ["."]  # Look in the current directory (repo root)
include = ["photomap*"]  # Include photomap package and subpackages

# Include package data files
[tool.setuptools.package-data]
"photomap.frontend" = ["static/**", "templates/**"]

[project.scripts]
index_images = "photomap.backend.imagetool:main"
update_images = "photomap.backend.imagetool:main"
search_images = "photomap.backend.imagetool:main"
search_text = "photomap.backend.imagetool:main"
find_duplicate_images = "photomap.backend.imagetool:main"
start_photomap = "photomap.backend.photomap_server:main"
