[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photomapai"
version = "0.9.3"
description = "AI-based image clustering and exploration tool"
authors = [
    { name = "Lincoln Stein", email = "lincoln.stein@gmail.com" }
]
readme = { "content-type" = "text/markdown", file = "README.md" }
license = { text = "MIT" }
requires-python = ">=3.10, <3.14"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: Viewers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "Pillow",
    "clip-anytorch",
    "colorama",
    "dash",
    "fastapi",
    "jinja2",
    "networkx",
    "numpy",
    "pandas",
    "pillow-heif",
    "platformdirs",
    "pydantic",
    "python-multipart",
    "PyYAML",
    "requests",
    "scikit-learn",
    "setuptools<67",  # Avoid deprecation warning from CLIP dependency
    "torch",
    "tqdm",
    "umap-learn",
    "uvicorn",
    "psutil",
    "packaging",
]

[project.urls]
Homepage = "https://github.com/lstein/PhotoMapAI"

[project.optional-dependencies]
testing = [
    "pytest",
    "pytest-cov",
    "httpx",
    "asynctest",
    "pytest-asyncio",
]
development = [
    "build",
    "mkdocs-material",
    "twine",
    "pymdown-extensions",
]

[tool.setuptools.packages.find]
where = ["."]  # Look in the current directory (repo root)
include = ["photomap*"]  # Include photomap package and subpackages

# Include package data files
[tool.setuptools.package-data]
"photomap.frontend" = ["static/**", "templates/**"]

[project.scripts]
index_images = "photomap.backend.imagetool:main"
update_images = "photomap.backend.imagetool:main"
search_images = "photomap.backend.imagetool:main"
search_text = "photomap.backend.imagetool:main"
find_duplicate_images = "photomap.backend.imagetool:main"
photomap_server = "photomap.backend.photomap_server:main"
start_photomap = "photomap.backend.photomap_outer_loop:start_photomap"

# py2app configuration
[tool.py2app]
# The script to bundle (path is relative to the repository root)
# This must be one line to avoid TOML parsing errors
app = [ { script = "photomap/backend/photomap_outer_loop.py", plist = { "CFBundleName" = "PhotoMapAI" }} ]

# Modules/packages to include in the frozen bundle (module names, not pip project names)
packages = ["photomap"]
includes = [
  "fastapi",
  "uvicorn",
  "jinja2",
  "numpy",
  "pandas",
  "networkx",
  "pillow_heif",   # import name for pillow-heif
  "platformdirs",
  "psutil",
  "pydantic",
  "python_multipart",
  "yaml",          # PyYAML provides 'yaml'
  "sklearn",       # scikit-learn import name
  "torch",
  "tqdm",
  "umap",          # umap-learn import name
  "packaging",
  "dash",
  "clip_anytorch", # verify actual import name in your env
  "colorama"
]

# Icon and resources
iconfile = "photomap/frontend/static/icons/icon.icns"
resources = []

# Behavioural options
argv_emulation = true
dist_dir = "dist"