[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photomapai"
version = "1.1.0"
description = "AI-based image clustering and exploration tool"
authors = [
    { name = "Lincoln Stein", email = "lincoln.stein@gmail.com" }
]
readme = { content-type = "text/markdown", file = "README.md" }
license = { text = "MIT" }
requires-python = ">=3.10, <3.15"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Graphics :: Viewers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "Pillow",
    "clip-anytorch",
    "colorama",
    "dash",
    "fastapi",
    "jinja2",
    "networkx",
    "numpy",
    "open_clip_torch",  # OpenCLIP encoder backend
    "pandas",
    "pillow-heif",
    "platformdirs",
    "pydantic",
    "python-multipart",
    "PyYAML",
    "requests",
    "scikit-learn",
    "setuptools<67",  # Avoid deprecation warning from CLIP dependency
    "torch",
    "tqdm",
    "transformers",  # SigLIP encoder backend
    "numba>=0.57",  # 0.57+ supports Python 3.12+; without this, resolver can pick numba 0.53.1 which only supports <3.10
    "umap-learn",
    "uvicorn",
    "psutil",  # Add this for process management
    "packaging",  # Add this for version checking
    "send2trash",
]

[project.urls]
Homepage = "https://github.com/lstein/PhotoMapAI"

[project.optional-dependencies]
testing = [
    "pytest",
    "pytest-cov",
    "httpx",
    "asynctest",
    "pytest-asyncio",
]
development = [
    "build",
    "mkdocs<1.6",
    "mkdocs-material",
    "pymdown-extensions",
    "twine",
    "ruff",
]
[tool.setuptools.packages.find]
where = ["."]  # Look in the current directory (repo root)
include = ["photomap*"]  # Include photomap package and subpackages

# Include package data files
[tool.setuptools.package-data]
"photomap.frontend" = ["static/**", "templates/**"]
"photomap.backend" = ["data/*.txt", "data/*.md"]

[project.scripts]
index_images = "photomap.backend.imagetool:main"
update_images = "photomap.backend.imagetool:main"
search_images = "photomap.backend.imagetool:main"
search_text = "photomap.backend.imagetool:main"
find_duplicate_images = "photomap.backend.imagetool:main"
rebuild_cluster_labels = "photomap.backend.imagetool:main"
start_photomap = "photomap.backend.launch:main"

[tool.ruff]
# Set line length to match the project's style
line-length = 120
target-version = "py310"

# Enable selected rule sets
lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]

# Ignore certain rules
lint.ignore = [
    "E501",  # Line too long (handled by formatter)
]

# Exclude directories
exclude = [
    ".git",
    ".github",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".pytest_cache",
    ".venv",
    "venv",
]

[tool.ruff.lint.isort]
known-first-party = ["photomap"]
